# 3122a_YM_Biblioteca

./: .gitattributes  .gitignore  3122a_YM_Biblioteca  BibliotecaDB.db  CMakeLists.txt  Makefile  README.md  proiect3122a_YM_BiblioTest
docs/: exemplu.txt
lib/SQLiteCpp/: Backup.cpp  Column.cpp
lib/imgui/: imgui-SFML.cpp
src/: Biblioteca.cpp  Biblioteca.h  Carte.cpp  Carte.h  CarteTehnica.cpp  CarteTehnica.h  Exceptie.cpp  functii.cpp  header.h  main.cpp
src/Baze de date/: BazaDeDate.cpp  BazaDeDate.h
src/Data de baza/: DataBaza.cpp  DataBaza.h
src/Entitati/: Administrator.cpp  Administrator.h  Bibliotecar.cpp  Bibliotecar.h  Client.cpp  Client.h  Clienti.cpp  Persoane.cpp  Persoane.h
src/Exceptie/: Exceptie.cpp  Exceptie.h
src/Interfata/: Interfata.cpp  Interfata.h
src/Nucleu/: Biblioteca.cpp  Biblioteca.h
src/Obiecte/: Carte.cpp  Carte.h  CarteAudio.cpp  CarteAudio.h  CarteDigitala.cpp  CarteDigitala.h  CarteFictiune.cpp  CarteFictiune.h  CarteFizica.cpp  CarteFizica.h  CarteTehnica.cpp  CarteTehnica.h
src/Securitate/: Criptare.cpp  Criptare.h
src/Utilitati/: Utilitati.cpp  Utilitati.h
tests/: testsExemplu.txt
